# valuation-monitor

./: .env.example  .gitignore  DESIGN.md  README.md  SRS.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_dual_source_lg_csi.py  0003_signal_source.py  0004_data_anomaly.py  0005_anomaly_acknowledge.py  0006_stock_entities.py  0007_watchlist_entity_type.py  0008_fund_active.py  0009_valuation_temp_source.py  0010_index_constituent.py  0011_holding.py  0012_holding_quantity.py  0013_tushare_call_log.py  0014_holding_cost_basis.py  0015_security_catalog.py
backend/app/: config.py  db.py  deps.py  errors.py  main.py
backend/app/adapters/: __init__.py  akshare_adapter.py  base.py  fund_akshare_adapter.py  multpl_adapter.py  registry.py  stock_base.py  stock_tushare_adapter.py  tushare_adapter.py  yfinance_adapter.py
backend/app/api/: backtest.py  data_quality.py  dca.py  exports.py  funds.py  health.py  holdings.py  index_detail.py  indices.py  opportunities.py  overrides.py  overview.py  pipeline_runs.py  preferences.py  rebalance.py  router.py  search.py  signals.py  stocks.py  temperature_effectiveness.py  tier_transitions.py  tushare_usage.py  valuation.py  watchlist.py
backend/app/models/: __init__.py  audit.py  data_anomaly.py  dca.py  fund_nav.py  holding.py  index.py  index_constituent.py  market.py  override.py  preference.py  quote.py  security_catalog.py  signal.py  stock.py  tushare_call_log.py  valuation.py  watchlist.py
backend/tests/: conftest.py
(+201 files in other folders)
