[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valuation-monitor-backend"
version = "0.1.0"
description = "A 股 / 港股 / 美股指数估值监测后端"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cindy" }]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "apscheduler>=3.10",
  "akshare>=1.13",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "structlog>=24.1",
  "httpx>=0.27",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
]
us = [
  "yfinance>=0.2.40",
]
tushare = [
  "tushare>=1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
